cruft-ng (0.4.7) UNRELEASED; urgency=medium

  * switch to debhelper compat level 11

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Sat, 17 Nov 2018 18:00:08 +0100

cruft-ng (0.4.6) unstable; urgency=medium

  * consider all intermediates subdirectories under /etc as OK
    if those contain some dpkg-managed files
  * Declare compliance with Policy 4.1.3

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Tue, 02 Jan 2018 10:17:32 +0100

cruft-ng (0.4.5) unstable; urgency=low

  * Declare compliance with Policy 4.1.2
  * Enable full hardening
  * Only refresh mlocate database when needed
  * Switch to DebHelper 10
  * Handle filenames longer than 199 bytes (Closes: #867016),
    thanks to Stefan Bühler
  * set Rules-Requires-Root: no

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Fri, 08 Dec 2017 12:21:32 +0100

cruft-ng (0.4.4) unstable; urgency=low

  * Add support for systems with UsrMerge

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Sun, 17 Jan 2016 21:16:43 +0100

cruft-ng (0.4.3) unstable; urgency=low

  * don't report .pyc files if a .py file exist (Closes:  #366616)

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Wed, 06 Jan 2016 21:51:45 +0100

cruft-ng (0.4.2) unstable; urgency=low

  * revert ignoring /srv, let admin handle this with their custom rules
  * take into account dpkg's path-exclude configuration (Closes: #619086)

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Fri, 11 Dec 2015 13:04:38 +0100

cruft-ng (0.4.1) unstable; urgency=low

  * always ignore contents of /mnt & /srv
  * run on a single file (Closes: #432026), this is a very simple implementation
    that can be enhanced
  * depends on cruft-common instead of "cruft (<< 0.9.20) | cruft-common"

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Thu, 05 Nov 2015 23:52:51 +0100

cruft-ng (0.4) unstable; urgency=medium

  * Enable DEBUG all over the place
  * Print DEBUG info to stderr