@@ -2,11 +2,7 @@
 #include <fstream>
 #include <algorithm>
 #include <limits>
-#include "mlocate_db.h"
-//       original filename is 'db.h'
-// TODO: should be packaged in /usr/include by 'mlocate' package
-//       like 'make' provides '/usr/include/gnumake.h'
-//       and  'sudo' provides '/usr/include/sudo_plugin.h'
+#include <mlocate/db.h>
 
 #include "mlocate.h"
 
